<resources>
    <string name="app_name">SecondApplication</string>
    <string name="string_textviewhello">Hello World</string>
    <string name="string_textviewtitle">Samsung Galaxy S22</string>
    <string name="buton_1">Buy Now</string>
    <string name="buton_2">Pricing</string>
    <string name="buton_3">Details</string>
    <string name="description_imageviewsamsung">Samsung S22 Image</string>
    <string name="string_appname">Training</string>
    <string name="string_tvusername">Username</string>
    <string name="password">Password</string>
    <string name="button">Log in</string>
    <string name="string_tvlogin">Log in</string>
</resources>