<?xml version="1.0" encoding="utf-8" ?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:paddingTop="16dp"
    android:paddingBottom="32dp"
    android:paddingHorizontal="16dp">

    <TextView
        android:id="@+id/textviewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/string_textviewtitle"
        android:textStyle="bold"
        android:textSize="30dp"/>

    <ImageView
        android:id="@+id/imageviewSamsung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/samsung_logo_icon_169775"
        android:contentDescription="@string/description_imageviewsamsung"/>

    <Button
        android:id="@+id/buton_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buton_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buton_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buton_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buton_third"
        app:layout_constraintStart_toEndOf="@+id/buton_first" />

    <Button
        android:id="@+id/buton_third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buton_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>